Fixed bug with sliders on mobile

--- a/algo.css
+++ b/algo.css
@@ -226,7 +226,7 @@ body {
 .slider {
     -webkit-appearance: none;  /* Override default CSS styles */
     appearance: none;
-    width: 250px; /* Full-width */
+    width: 100%; /* Full-width */
     height: 25px; /* Specified height */
     background: #d3d3d3; /* Grey background */
     outline: none; /* Remove outline */
